# ecommerce_support

./: .gitignore  .gradioignore  README.md  agents_config.py  app.py  main.py  pyproject.toml  requirements.txt  tools.py
.github/: dependabot.yml
.github/workflows/: code-quality.yml  tests.yml
database/: conversations.db
src/BusinessModel/: database_schema.sql  models.py  setup_inventory_data.py
src/agents/: agents_config.py  inventory_agent.py
src/tools/: inventory_tools.py
tests/: test_inventory.py
